[gd_scene load_steps=7 format=3 uid="uid://cakah0vnvca6s"]

[ext_resource type="Script" path="res://scripts/calendar_ui_handler.gd" id="1_5krrb"]
[ext_resource type="Script" path="res://scripts/day_icon_handler.gd" id="2_056d3"]
[ext_resource type="Script" path="res://scripts/Buttons/month_forward.gd" id="3_xtw1u"]
[ext_resource type="Script" path="res://scripts/Buttons/year_forward.gd" id="4_s1sxc"]
[ext_resource type="Script" path="res://scripts/Buttons/month_back.gd" id="5_xn7y4"]
[ext_resource type="Script" path="res://scripts/Buttons/year_back.gd" id="6_78v4j"]

[node name="CalendarHandler" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_5krrb")

[node name="YearLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -69.5
offset_right = 69.5
offset_bottom = 88.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 64
text = "Year"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MonthLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -9.0
offset_top = 80.0
offset_right = 9.0
offset_bottom = 125.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DayContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.222222
anchor_top = 0.222222
anchor_right = 0.777778
anchor_bottom = 0.916667
grow_horizontal = 2
grow_vertical = 2
columns = 5
script = ExtResource("2_056d3")

[node name="Buttons" type="Node" parent="."]

[node name="MonthForward" type="Button" parent="Buttons"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -296.0
offset_top = 80.0
offset_right = -144.0
offset_bottom = 111.0
grow_horizontal = 0
text = "Advance month +1
"
script = ExtResource("3_xtw1u")

[node name="YearForward" type="Button" parent="Buttons"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -136.0
offset_top = 80.0
offset_bottom = 112.0
grow_horizontal = 0
text = "Advance year +1
"
script = ExtResource("4_s1sxc")

[node name="MonthBack" type="Button" parent="Buttons"]
offset_left = 144.0
offset_top = 80.0
offset_right = 292.0
offset_bottom = 112.0
text = "Advance month -1
"
script = ExtResource("5_xn7y4")

[node name="YearBack" type="Button" parent="Buttons"]
offset_top = 80.0
offset_right = 136.0
offset_bottom = 112.0
text = "Advance year -1
"
script = ExtResource("6_78v4j")
